<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#f5f5f5"
    >
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:useDefaultMargins="true"
        app:alignmentMode="alignBounds"
        >

        <TextView
            android:text="@string/date_tv"
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />

        <Spinner
            android:id="@+id/date_spinner"
            android:layout_width="0dp"
            app:layout_columnWeight="2"
            app:layout_gravity="fill_horizontal"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/FinnkinoSpinner"
            android:padding="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            >
        </Spinner>

        <TextView
            android:text="@string/location_tv"
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />

        <Spinner
            android:layout_width="0dp"
            app:layout_columnWeight="2"
            app:layout_gravity="fill_horizontal"
            android:id="@+id/location_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/FinnkinoSpinner"
            android:padding="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            >
        </Spinner>

        <TextView
            android:text="@string/start_tv"
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            />


        <Spinner
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:id="@+id/time_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/FinnkinoSpinner"
            android:padding="16dp"
            >
        </Spinner>

        <TextView
            android:text="@string/age_tv"
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            />

        <Spinner
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:id="@+id/rating_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/FinnkinoSpinner"
            android:padding="16dp"
            >
        </Spinner>

    </android.support.v7.widget.GridLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        >

        <Button
            android:id="@+id/filterApplyButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorGrayTextOnYellow"
            android:text="@string/apply_button_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp" />

        <Button
            android:id="@+id/defaults_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/defaults_button_text"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>